# dobrokek-bot

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
handlers/: __init__.py  link_message_handler.py  photo_message_handler.py  video_message_handler.py
notebooks/: build_assets.py  build_video.ipynb  build_video.py  pyproject.toml
sources/: __init__.py  reels.py  shorts.py  source.py  tiktok.py
video_builder/: Makefile  audio_gen.py  build_assets.py  build_clips.py  build_video.ipynb  build_video.py  hw_encoder.py  leaderboard_render.py  make_leaderboard.py  pyproject.toml
