[project]
name = "dobrokek-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "sasha-sem"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot (>=22.5,<23.0)",
    "instaloader (>=4.15,<5.0)",
    "pytubefix (>=10.3.5,<11.0.0)",
    "yt-dlp (>=2025.11.12,<2026.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
