[project]
name = "video-builder"
version = "0.1.0"
description = "Антидоброкек compilation video builder"
requires-python = ">=3.12"
dependencies = [
    "moviepy>=2.0.0",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
